--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,6 +14,9 @@ android {
 
         instrumentTest.setRoot('tests')
     }
+    packagingOptions {
+        exclude 'META-INF/robovm/ios/robovm.xml'
+    }
     defaultConfig {
         applicationId "net.heinousgames.game.spreadeaglecrosstheblock"
         minSdkVersion 8
